[TASK] Correct table cell text wrap
refs TRA-18

--- a/src/scss/components/_dx_table.scss
+++ b/src/scss/components/_dx_table.scss
@@ -1,4 +1,4 @@
-.dx-g-bs4-table-cell {
+.dx-g-bs4-table-cell.position-sticky {
 	overflow: visible;
 }
 
